--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "analyze": "size-limit --why"
   },
   "peerDependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react": "^17.0.1 || ^18.2.0",
+    "react-dom": "^17.0.1 || ^18.2.0"
   },
   "husky": {
     "hooks": {
