--- a/package.json
+++ b/package.json
@@ -47,12 +47,14 @@
     "@testing-library/dom": "^7.30.0",
     "@types/react": "^17.0.3",
     "husky": "^5.1.3",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "size-limit": "^4.10.1",
     "tsdx": "^0.14.1",
     "tslib": "^2.1.0",
     "typescript": "^4.2.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@changesets/cli": "^2.25.0"
+  }
 }
