--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "start": "tsdx watch",
     "build": "tsdx build --format cjs,esm",
+    "release": "changeset publish",
     "test": "tsdx test",
     "lint": "tsdx lint",
     "prepare": "npm run build",
