--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "analyze": "size-limit --why"
   },
   "peerDependencies": {
-    "react": "^17.0.1 || ^18.2.0",
-    "react-dom": "^17.0.1 || ^18.2.0"
+    "react": "^17.0.1 || ^18.2.0 || ^19.2.0",
+    "react-dom": "^17.0.1 || ^18.2.0 || ^19.2.0"
   },
   "husky": {
     "hooks": {
@@ -48,8 +48,8 @@
     "@testing-library/dom": "^7.30.0",
     "@types/react": "^17.0.3",
     "husky": "^5.1.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "size-limit": "^4.10.1",
     "tsdx": "^0.14.1",
     "tslib": "^2.1.0",
